# kopf-forger

./: .gitignore  .pre-commit-config.yaml  .releaserc.yml  Dockerfile  Pipfile  README.md  example.yaml  handlers.py  pyproject.toml
.github/workflows/: publish.yml  pylint.yml  workflows.yml
deploy/bases/: crd.yaml  deployment.yaml  rbac.yaml
deploy/overlays/staging/: kustomization.yaml  namespace.yaml
